--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -25,9 +25,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "import hashlib\n",
     "\n",
@@ -35,7 +43,7 @@
     "     hash_object = hashlib.sha256(input_string.encode())\n",
     "     hash_int = int(hash_object.hexdigest(), 16)\n",
     "     return (hash_int % 3) + 1\n",
-    "input_string = \"your_first_name_here\"\n",
+    "input_string = \"saraneya\"\n",
     "result = hash_to_range(input_string)\n",
     "print(result)\n"
    ]
@@ -112,13 +120,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_valid_brackets(s: str) -> bool:\n",
-    "    # TODO\n",
-    "    pass"
+    " # TODO\n",
+    "    pass\n"
    ]
   },
   {
@@ -169,7 +177,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# Your answer here\n",
+    "# Confirm if a string of brackets is properly balanced, meaning all open brackets\n",
+    "# have a corresponding closed bracket in the correct order. The string is balanced if \n",
+    "# the sequence includes pairs of open and closed brackets with the brackets closing \n",
+    "# in the reverse order they were opened."
    ]
   },
   {
@@ -181,11 +193,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# Your answer here\n",
+    "# Input: s = ([{}])\n",
+    "# Output: True\n",
+    "# Input: s = [[({)]}]\n",
+    "# Output: False"
    ]
   },
   {
@@ -198,11 +214,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# Your answer here\n",
+    "def is_valid_brackets(s: str) -> bool:\n",
+    "    brackets = {\")\":\"(\",\n",
+    "                \"}\":\"{\",\n",
+    "                \"]\":\"[\"}\n",
+    "    openlist = []\n",
+    "    ans = True\n",
+    "    for i in s:\n",
+    "        if i in brackets:\n",
+    "            lasti = openlist.pop() if openlist else \"empty\"\n",
+    "            if lasti != brackets[i]:\n",
+    "                ans = False\n",
+    "        else:\n",
+    "            openlist.append(i)\n",
+    "    if len(openlist) > 0:\n",
+    "        ans = False\n",
+    "    return ans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_valid_brackets(\"[]()\")"
    ]
   },
   {
@@ -219,7 +271,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# Your answer here\n",
+    "# The brackets dictionary establishes the valid bracket pairs.\n",
+    "# Then, the openlist 'stack' is created to keep track of the\n",
+    "# open brackets. \n",
+    "# Finally, the 'answer' is set to True before starting the for loop.\n",
+    "# The for loop is started to check each item in the string.\n",
+    "# First, the item is searched in the brackets\n",
+    "# dictionary. If it is there, it is a closing bracket. \n",
+    "# If it is a closing bracket, the last element from the open bracket \n",
+    "# list is popped from the stack.\n",
+    "# The last open bracket is compared to the expected open bracket\n",
+    "# that matches the closing bracket from the dictionary.\n",
+    "# If the open bracket from the dictionary doesn't match the \n",
+    "# last open bracket from the stack, this means there is still\n",
+    "# an open bracket that has not been closed. Thus, the brackets\n",
+    "# are imbalanced, so the answer is changed to false.\n",
+    "# If there is no previous open bracket and the stack is empty, the\n",
+    "# popped element will be listed as \"empty\" which will also result in\n",
+    "# a non-equal check when compared to the close bracket dictionary,\n",
+    "# thus also resulting in an answer of false.\n",
+    "# Alternatively, if the item is not found in the brackets dictionary,\n",
+    "# it is an open bracket, so it is added to the open bracket list\n",
+    "# and thus to the top of the stack.\n",
+    "# After the entire string is run through, the open list is\n",
+    "# checked to see if there are any remaining items.\n",
+    "# Finally, if the answer was never changed to false through\n",
+    "# the for loop or open bracket check, it remains true\n",
+    "# and the brakcets are balanced."
    ]
   },
   {
@@ -232,11 +311,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# Your answer here\n",
+    "# The space complexity here is O(n). This is based on a worst-case\n",
+    "# string of only open brackets in the string, in which case the stack \n",
+    "# of open brackets will include all elements.\n",
+    "# The time complexity is O(n). The dictionary check is O(1)\n",
+    "# and the append and pop operations are O(1), but the string of\n",
+    "# brackets is passed through once, and in a worst-case scenario\n",
+    "# of a string of all open brackets, will be fully passed through,\n",
+    "# and thus O(n)."
    ]
   },
   {
@@ -253,7 +340,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here"
+    "# Your answer here\n",
+    "# An alternative solution could be to create 2 lists for comparison:\n",
+    "# 1 with all closed brackets - closedbracketcheck and \n",
+    "# 1 with all open brackets - openbracketcheck. The closedbracketcheck\n",
+    "# and openbracketcheck lists should be matched so closedbracketcheck[0]\n",
+    "# has its corresponding open bracket in openbracketcheck[0].\n",
+    "# A new blank list should be created - bracketstring - to collect\n",
+    "# the open bracket elements from the string.\n",
+    "# The answer should be set to True to start.\n",
+    "# Then, a for loop can then be used to begin checking the elements of the\n",
+    "# input s bracket string.\n",
+    "# First, if the string has a length that is an odd number, it is\n",
+    "# immediately clear that the brackets are unbalanced, so the for \n",
+    "# loop can be terminated and an answer of false returned.\n",
+    "# Next, the string element should be compared to the open bracket list.\n",
+    "# If it is in the open bracket list, it should be added to the bracketstring list.\n",
+    "# If not, the element should be compared to the closedbracketcheck list\n",
+    "# to find its index #.\n",
+    "# Then, the last element from bracketstring list is popped and is\n",
+    "# compared to the openbracketcheck list to find its index #.\n",
+    "# If the index number of the close bracket matches the index number of the\n",
+    "# last open bracket from the bracketstring list, \n",
+    "# then the brackets are balanced and the for\n",
+    "# loop can proceed. If the index numbers do not match, there\n",
+    "# is a bracket mismatch where there is still an unclosed\n",
+    "# open bracket, so False should be returned.\n",
+    "# If the entire for loop is completed and the answer of False\n",
+    "# is not found, then the bracketstring list can be checked to\n",
+    "# confirm its length is 0, meaning all open brackets had a\n",
+    "# corresponding close bracket.\n",
+    "# If the bracketstring list is 0, the answer of True can be returned."
    ]
   },
   {
@@ -301,7 +418,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "algos-env",
    "language": "python",
    "name": "python3"
   },
@@ -315,7 +432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
